--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
     "multer": "^1.4.5-lts.1",
     "nanoid": "^4.0.0",
     "pino": "8.14.1",
-    "reflect-metadata": "0.1.13"
+    "reflect-metadata": "0.1.13",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "@types/convict": "6.1.1",
     "@types/convict-format-with-validator": "6.0.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "18.16.3",
     "@typescript-eslint/eslint-plugin": "5.46.0",
