--- a/specification/specification.yaml
+++ b/specification/specification.yaml
@@ -17,24 +17,6 @@ paths:
           required: false
           schema:
             type: integer
-        - name: offset
-          in: query
-          description: The number of offers to skip (optional)
-          required: false
-          schema:
-            type: integer
-        - name: isPremium
-          in: query
-          description: Filter offers by premium status (optional)
-          required: false
-          schema:
-            type: boolean
-        - name: isFavourite
-          in: query
-          description: Filter offers by favorite status (optional)
-          required: false
-          schema:
-            type: boolean
       responses:
         200:
           description: Successful response
@@ -43,7 +25,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Offer'
+                  $ref: '#/components/schemas/OfferResponse'
         400:
           description: Validation Error
         401:
@@ -59,14 +41,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Offer'
+              $ref: '#/components/schemas/CreateOfferRequest'
       responses:
         201:
           description: Offer created successfully
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Offer'
+                $ref: '#/components/schemas/OfferResponse'
         400:
           description: Validation Error
         401:
@@ -91,13 +73,13 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Offer'
+                $ref: '#/components/schemas/OfferResponse'
         404:
           description: Offer not found
         401:
           description: Unauthorized
 
-    put:
+    patch:
       tags:
         - Offers
       summary: Update an offer by ID
@@ -107,20 +89,22 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Offer'
+              $ref: '#/components/schemas/UpdateOfferRequest'
       responses:
         200:
           description: Offer updated successfully
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Offer'
+                $ref: '#/components/schemas/OfferResponse'
         404:
           description: Offer not found
         400:
           description: Validation Error
         401:
           description: Unauthorized
+        403:
+          description: Forbidden
 
     delete:
       tags:
@@ -134,8 +118,10 @@ paths:
           description: Offer not found
         401:
           description: Unauthorized
+        403:
+          description: Forbidden
 
-  /offers/{offerId}/comments:
+  /comments/{offerId}:
     get:
       tags:
         - Comments
@@ -147,18 +133,6 @@ paths:
           description: The ID of the offer to retrieve comments for
           schema:
             type: string
-        - name: limit
-          in: query
-          description: The maximum number of comments to return (optional)
-          required: false
-          schema:
-            type: integer
-        - name: offset
-          in: query
-          description: The number of comments to skip (optional)
-          required: false
-          schema:
-            type: integer
       responses:
         200:
           description: Successful response
@@ -167,7 +141,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Comment'
+                  $ref: '#/components/schemas/CommentResponse'
         404:
           description: Offer not found
         401:
@@ -189,20 +163,20 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Comment'
+              $ref: '#/components/schemas/CreateCommentRequest'
       responses:
         201:
           description: Comment created successfully
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Comment'
+                $ref: '#/components/schemas/CommentResponse'
         400:
           description: Validation Error
         401:
           description: Unauthorized
 
-  /offers/{offerId}/favorites:
+  /favorite/{offerId}/{status}:
     post:
       tags:
         - Favourites
@@ -215,38 +189,51 @@ paths:
           description: The ID of the offer to add to favorites
           schema:
             type: string
+        - name: status
+          in: path
+          required: true
+          description: The status of the offer in favorites (1 or 0)
+          schema:
+            type: number
+            enum:
+              - 1
+              - 0
       responses:
         201:
           description: Offer added to favorites successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/OfferResponse'
         404:
           description: Offer not found
         401:
           description: Unauthorized
 
-    delete:
-      tags:
-        - Favourites
-      summary: Remove an offer from favorites
-      description: Remove an offer from the user's list of favorites.
-      parameters:
-        - name: offerId
-          in: path
-          required: true
-          description: The ID of the offer to remove from favorites
-          schema:
-            type: string
-      responses:
-        204:
-          description: Offer removed from favorites successfully
-        404:
-          description: Offer not found
-        401:
-          description: Unauthorized
-
-  /user:
+  /favorite:
     get:
       tags:
-        - User
+        - Favourites
+      summary: Get a list of favorite offers
+      description: Retrieve a list of favorite offers with optional pagination.
+      responses:
+        200:
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/FavoriteOfferShortResponse'
+        400:
+          description: Validation Error
+        401:
+          description: Unauthorized
+
+  /login:
+    get:
+      tags:
+        - Users
       summary: Get the current user
       responses:
         200:
@@ -254,43 +241,34 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                $ref: '#/components/schemas/UserResponse'
         401:
           description: Unauthorized
 
-  /user/login:
     post:
       tags:
-        - User
+        - Users
       summary: Login a user
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                email:
-                  type: string
-                password:
-                  type: string
-              required:
-                - email
-                - password
+              '$ref': '#/components/schemas/LoginUserRequest'
       responses:
         200:
           description: User logged in successfully
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                $ref: '#/components/schemas/LoginUserResponse'
         400:
           description: Validation Error
 
-  /user/logout:
+  /logout:
     post:
       tags:
-        - User
+        - Users
       summary: Logout the current user
       responses:
         204:
@@ -298,40 +276,24 @@ paths:
         401:
           description: Unauthorized
 
-  /user/register:
+  /register:
     post:
       tags:
-        - User
+        - Users
       summary: Register a new user
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                name:
-                  type: string
-                email:
-                  type: string
-                avatar:
-                  type: string
-                password:
-                  type: string
-                type:
-                  $ref: '#/components/schemas/UserType'
-              required:
-                - name
-                - email
-                - password
-                - type
+              '$ref': '#/components/schemas/CreateUserRequest'
       responses:
         201:
           description: User registered successfully
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                $ref: '#/components/schemas/UserResponse'
         400:
           description: Validation Error
 
@@ -351,21 +313,15 @@ tags:
 
 components:
   schemas:
-    UserType:
-      type: string
-      enum:
-        - standart
-        - pro
-
     City:
       type: string
       enum:
-        - Ekaterinburg
-        - Tyumen
-        - Tambov
-        - Magadan
-        - Vorkuta
-        - Moscow
+        - Paris
+        - Cologne
+        - Brussels
+        - Amsterdam
+        - Hamburg
+        - Dusseldorf
 
     HousingType:
       type: string
@@ -397,35 +353,102 @@ components:
         - latitude
         - longitude
 
-    User:
+    LoginUserResponse:
       type: object
       properties:
+        token:
+          type: string
+        refreshToken:
+          type: string
+        email:
+          type: string
+          format: email
+        name:
+          type: string
+        avatarUrl:
+          type: string
+          format: uri
+        isPro:
+          type: boolean
+      required:
+        - token
+        - refreshToken
+        - email
+        - name
+        - avatarUrl
+        - isPro
+
+    LoginUserRequest:
+      type: object
+      properties:
+        email:
+          type: string
+          format: email
+        password:
+          type: string
+      required:
+        - email
+        - password
+
+    CreateUserRequest:
+      type: object
+      properties:
+        email:
+          type: string
+          format: email
+        name:
+          type: string
+          maxLength: 15
+          minLength: 1
+        isPro:
+          type: boolean
+        password:
+          type: string
+          maxLength: 12
+          minLength: 6
+      required:
+        - email
+        - name
+        - isPro
+        - password
+
+    UserResponse:
+      type: object
+      properties:
+        id:
+          type: string
         name:
           type: string
         email:
           type: string
-        avatar:
+          format: email
+        avatarUrl:
           type: string
-        type:
-          $ref: '#/components/schemas/UserType'
+          format: uri
+        isPro:
+          type: boolean
       required:
+        - id
         - name
         - email
-        - type
+        - avatarUrl
+        - isPro
 
-    Offer:
+    OfferResponse:
       type: object
       properties:
+        id:
+          type: string
         title:
           type: string
-        description:
-          type: string
-        publicationDate:
+        createdAt:
           type: string
           format: date-time
+        description:
+          type: string
         city:
           $ref: '#/components/schemas/City'
-        preview:
+        previewImage:
           type: string
         images:
           type: array
@@ -433,61 +456,222 @@ components:
             type: string
         isPremium:
           type: boolean
-        isFavourite:
+        isFavorite:
           type: boolean
         rating:
           type: number
-        housingType:
+        type:
           $ref: '#/components/schemas/HousingType'
-        roomCount:
+        price:
           type: number
-        guestCount:
+        commentsCount:
           type: number
-        cost:
+        bedrooms:
           type: number
-        facilities:
+        maxAdults:
+          type: number
+        goods:
           type: array
           items:
             $ref: '#/components/schemas/Facilities'
-        author:
-          $ref: '#/components/schemas/User'
-        commentsCount:
-          type: number
-        coordinates:
+        host:
+          $ref: '#/components/schemas/UserResponse'
+        location:
           $ref: '#/components/schemas/Coordinates'
       required:
+        - id
         - title
+        - createdAt
         - description
-        - publicationDate
         - city
-        - preview
+        - previewImage
         - images
         - isPremium
-        - isFavourite
+        - isFavorite
         - rating
-        - housingType
-        - roomCount
-        - guestCount
-        - cost
-        - facilities
-        - author
+        - type
+        - price
         - commentsCount
-        - coordinates
+        - bedrooms
+        - maxAdults
+        - goods
+        - host
+        - location
 
-    Comment:
+    FavoriteOfferShortResponse:
       type: object
       properties:
-        text:
+        id:
+          type: string
+        title:
           type: string
         publicationDate:
           type: string
           format: date-time
+        city:
+          $ref: '#/components/schemas/City'
+        previewImage:
+          type: string
+        isPremium:
+          type: boolean
+        isFavourite:
+          type: boolean
         rating:
           type: number
-        author:
-          $ref: '#/components/schemas/User'
+        type:
+          $ref: '#/components/schemas/HousingType'
+        price:
+          type: number
+        commentsCount:
+          type: number
       required:
-        - text
+        - id
+        - title
         - publicationDate
+        - city
+        - previewImage
+        - isPremium
+        - isFavourite
         - rating
-        - author
+        - type
+        - price
+        - commentsCount
+
+    UpdateOfferRequest:
+      type: object
+      properties:
+        title:
+          type: string
+          minLength: 10
+          maxLength: 100
+        description:
+          type: string
+          minLength: 20
+          maxLength: 1024
+        city:
+          $ref: '#/components/schemas/City'
+        previewImage:
+          type: string
+        images:
+          type: array
+          items:
+            type: string
+        isPremium:
+          type: boolean
+        type:
+          $ref: '#/components/schemas/HousingType'
+        bedrooms:
+          type: number
+          minimum: 1
+          maximum: 8
+        maxAdults:
+          type: number
+          minimum: 1
+          maximum: 10
+        price:
+          type: number
+          minimum: 100
+          maximum: 100000
+        goods:
+          type: array
+          items:
+            $ref: '#/components/schemas/Facilities'
+          minItems: 1
+        location:
+          $ref: '#/components/schemas/Coordinates'
+        host:
+          type: string
+
+    CreateOfferRequest:
+      type: object
+      properties:
+        title:
+          type: string
+          minLength: 10
+          maxLength: 100
+        description:
+          type: string
+          minLength: 20
+          maxLength: 1024
+        city:
+          $ref: '#/components/schemas/City'
+        previewImage:
+          type: string
+        images:
+          type: array
+          items:
+            type: string
+        isPremium:
+          type: boolean
+        type:
+          $ref: '#/components/schemas/HousingType'
+        bedrooms:
+          type: number
+          minimum: 1
+          maximum: 8
+        maxAdults:
+          type: number
+          minimum: 1
+          maximum: 10
+        price:
+          type: number
+          minimum: 100
+          maximum: 100000
+        goods:
+          type: array
+          items:
+            $ref: '#/components/schemas/Facilities'
+          minItems: 1
+        host:
+          type: string
+        location:
+          $ref: '#/components/schemas/Coordinates'
+      required:
+        - title
+        - description
+        - city
+        - previewImage
+        - images
+        - isPremium
+        - type
+        - bedrooms
+        - maxAdults
+        - price
+        - goods
+        - host
+        - location
+
+    CreateCommentRequest:
+      type: object
+      properties:
+        comment:
+          type: string
+          minLength: 5
+          maxLength: 1024
+        rating:
+          type: integer
+          minimum: 1
+          maximum: 10
+      required:
+        - comment
+        - rating
+
+    CommentResponse:
+      type: object
+      properties:
+        id:
+          type: string
+        comment:
+          type: string
+        rating:
+          type: number
+        createdAt:
+          type: string
+        authorId:
+          $ref: '#/components/schemas/UserResponse'
+      required:
+        - id
+        - comment
+        - rating
+        - createdAt
+        - authorId
